Updated Zillow ML File 08/19

--- a/CAPSTONE_Projects/CAPSTONE_01/Zillow_ML_Modelling_0802.ipynb
+++ b/CAPSTONE_Projects/CAPSTONE_01/Zillow_ML_Modelling_0802.ipynb
@@ -2376,13 +2376,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import Librarires\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "import xgboost as xgb"
+    "import xgboost as xgb\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -2413,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2422,82 +2424,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train = train_df.drop(['parcelid', 'logerror','transactiondate'], axis=1)\n",
-    "x_test = properties.drop(['parcelid'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape train: (90275, 57)\n",
-      "Shape test: (2985217, 57)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# shape        \n",
-    "print('Shape train: {}\\nShape test: {}'.format(x_train.shape, x_test.shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop out ouliers\n",
     "train_df=train_df[ train_df.logerror > -0.4 ]\n",
     "train_df=train_df[ train_df.logerror < 0.419 ]\n",
-    "x_train=train_df.drop(['parcelid', 'logerror','transactiondate'], axis=1)\n",
-    "y_train = train_df[\"logerror\"].values.astype(np.float32)\n",
-    "y_mean = np.mean(y_train)\n"
+    "train_y=train_df[\"logerror\"].values.astype(np.float32)\n",
+    "train_x=train_df.drop(['parcelid', 'logerror','transactiondate'], axis=1)\n",
+    "y_mean = np.mean(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After removing outliers:\n",
       "Shape train: (88528, 57)\n",
-      "Shape test: (2985217, 57)\n"
+      "Shape test: (88528,)\n"
      ]
     }
    ],
    "source": [
-    "print('After removing outliers:')     \n",
+    "# shape        \n",
+    "print('Shape train: {}\\nShape test: {}'.format(train_x.shape, train_y.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train test split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train,x_test,y_train,y_test = train_test_split(train_x,train_y,test_size = 0.3,random_state = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('After Splitting Test and Train Data :')     \n",
     "print('Shape train: {}\\nShape test: {}'.format(x_train.shape, x_test.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### RUN XGBOOST\n",
+    "# xgboost params\n",
     "xgb_params = {\n",
-    "    'eta': 0.037,\n",
-    "    'max_depth': 5,\n",
+    "    'eta': 0.033,\n",
+    "    'max_depth': 6,\n",
     "    'subsample': 0.80,\n",
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'mae',\n",
-    "    'lambda': 0.8,   \n",
-    "    'alpha': 0.4, \n",
     "    'base_score': y_mean,\n",
     "    'silent': 1\n",
     "}\n"
@@ -2505,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2515,56 +2506,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num_boost_rounds=250\n"
+      "num_boost_rounds=250\n",
+      "\n",
+      "Training XGBoost ...\n"
      ]
     }
    ],
    "source": [
     "num_boost_rounds = 250\n",
-    "print(\"num_boost_rounds=\"+str(num_boost_rounds))"
+    "print(\"num_boost_rounds=\"+str(num_boost_rounds))\n",
+    "\n",
+    "# train model\n",
+    "print( \"\\nTraining XGBoost ...\")\n",
+    "model = xgb.train(dict(xgb_params, silent=1), dtrain, num_boost_round=num_boost_rounds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training XGBoost ...\n",
-      "\n",
-      "Predicting with XGBoost ...\n",
-      "\n",
-      "First XGBoost predictions:\n",
-      "          0\n",
-      "0 -0.023582\n",
-      "1 -0.032242\n",
-      "2  0.007546\n",
-      "3  0.064200\n",
-      "4 -0.004868\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# train model\n",
-    "print( \"\\nTraining XGBoost ...\")\n",
-    "model = xgb.train(dict(xgb_params, silent=1), dtrain, num_boost_round=num_boost_rounds)\n",
-    "\n",
-    "print( \"\\nPredicting with XGBoost ...\")\n",
-    "xgb_pred1 = model.predict(dtest)\n",
-    "\n",
-    "print( \"\\nFirst XGBoost predictions:\" )\n",
-    "print( pd.DataFrame(xgb_pred1).head() )"
+    "# make predictions for test data\n",
+    "y_pred = model.predict(dtest)"
    ]
   },
   {
@@ -2576,21 +2547,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate predictions\n",
-    "accuracy = accuracy_score(y_test, predictions)"
+    "# CV model\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import KFold\n",
+    "model = xgb.train(dict(xgb_params, silent=1), dtrain, num_boost_round=num_boost_rounds)\n",
+    "kfold = KFold(n_splits=10, random_state=7)\n",
+    "results = cross_val_score(model, x_train, y_train, cv=kfold)\n",
+    "print(\"Accuracy: %.2f%% (%.2f%%)\" % (results.mean()*100, results.std()*100))"
    ]
   }
  ],
